@@ -9,6 +9,7 @@ Changelog
 
 Changes:
     * [Feature] Updated to Aimeos 2025.10.
+    * [Change] Deprecated the Smokey Grey recursion special handling. Not sure why it was there in the first place.
     * [Bugfix] Removed the last deprecation in the unit tests.
     * [Bugfix] Do not clutter up the output by analysing internal callables in the string analysis.
     * [Bugfix] Closed ressources are not recognised as a ressource by the resource analysis.
