@@ -1,3 +1,3 @@
 <li class="kchild"{gensource}>
-  <div class="kel kcopyFrom krecursion" data-domid="{domId}" {addjson}><span class="kname">{name}</span><em class="karrow ktype">=></em><span><span>&#8734;&nbsp;&nbsp;</span>{normal}</span><em class="ktype">({type})</em></div>
+  <div class="kel kcopyFrom krecursion" data-domid="{domId}"><span class="kname">{name}</span><em class="karrow ktype">=></em><span><span>&#8734;&nbsp;&nbsp;</span>{normal}</span><em class="ktype">({type})</em></div>
 </li>
