@@ -1,4 +1,6 @@
 6.0.3
+- Change: Deprecated the Smokey Grey recursion special handling.
+  Not sure why it was there in the first place.
 - Bugfix: Removed the last deprecation in the unit tests.
 - Bugfix: Do not clutter up the output by analysing internal
   callables in the string analysis.
